Changed content's min-width  units (px per rem) to avoid overflow with bigger font sizes

--- a/responsive-web-design/product-landing/style/main.css
+++ b/responsive-web-design/product-landing/style/main.css
@@ -241,7 +241,7 @@ body {
 
   .content {
     width: 50%;
-    min-width: 50rem;
+    min-width: 500px;
   }
 
   .content__text,
